draft discussion notes

--- a/emi/emi.tex
+++ b/emi/emi.tex
@@ -607,7 +607,14 @@ Figure \ref{fig:D_wellbrook_5ms} is noise D received on the Wellbrook. Note the 
 \subsection{Discussion}
 
 Noise, comes in layers.
-Complex impulse trains.  Noise blanker.  Wideband antenna
+
+Complex impulse trains.
+
+Noise blanker might not be able to handle it.  Diversity might, or systems that learn and remove impulse response.
+
+This noise will be smeared by a receiver.  Consider PSK symbols 20ms long - would would happen to them?
+
+Wideband antenna, wide processing bandwidth might help, but intermod.
 
 \bibliographystyle{plain}
 \bibliography{emi_refs}
